v1.0 deep clean